[package]
name = "hanabi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
fs4 = "0.13.1"
mime = "0.3.17"
pheasant_core = { path = "../pheasant/pheasant_core" } 
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
